examples/logfiles/optimization_log_20251221_154114.txt
=== Optimization started at 2025-12-21 15:41:14.568947 ===

Starting configurable BPSO optimization with parameters:
Frequency: 12.5 GHz
Bandwidth: 6 GHz
Unit cell size: 2 mm
Substrate thickness: 0.8 mm
Pixel grid: 7×7
MSE threshold: 1e-07
Transfer function: 1 - exp(-k*|v|/2)

Iter | Best f(x) | Mean f(x) | Stall | Inertia | Diversity
----------------------------------------------------------
Clearing COM object cache...
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
Running solver
Simulation completed successfully
CST file closed
Clearing COM object cache...
COM cache refreshed successfully
Cost function error: too many values to unpack (expected 3)
Error saving pixel configuration: 'NoneType' object is not subscriptable
   0 |       inf |       inf |     1 |  1.200 | 0.0000
Traceback (most recent call last):
  File "E:\GOPAL\cst_python_api_Filter\examples\flipVBPSO_dembed_polins.py", line 1029, in <module>
    results = pyoptimize_te(inputparameters)
  File "E:\GOPAL\cst_python_api_Filter\examples\flipVBPSO_dembed_polins.py", line 971, in pyoptimize_te
    results = optimizer.optimize()
  File "E:\GOPAL\cst_python_api_Filter\examples\flipVBPSO_dembed_polins.py", line 708, in optimize
    self._update_swarm()
    ~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst_python_api_Filter\examples\flipVBPSO_dembed_polins.py", line 685, in _update_swarm
    social = c2 * r2 * (self.state['global_best_position'] - self.positions)
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
Traceback (most recent call last):
  File "E:\GOPAL\cst_python_api_Filter\examples\flipVBPSO_dembed_polins.py", line 1029, in <module>
    results = pyoptimize_te(inputparameters)
  File "E:\GOPAL\cst_python_api_Filter\examples\flipVBPSO_dembed_polins.py", line 971, in pyoptimize_te
    results = optimizer.optimize()
  File "E:\GOPAL\cst_python_api_Filter\examples\flipVBPSO_dembed_polins.py", line 708, in optimize
    self._update_swarm()
    ~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst_python_api_Filter\examples\flipVBPSO_dembed_polins.py", line 685, in _update_swarm
    social = c2 * r2 * (self.state['global_best_position'] - self.positions)
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
